# Aplikasi-Dekstop-Penerimaan-Mahasiswa-Baru

Project_2/: CMakeLists.txt  Clean.h  Deklarasi.h  Desain.h  Laporan.h  Lib.h  Menu.h  SebelumLogin.h  TrsBayarFormulir.h  TrsBayarUkt.h  TrsNilai1.h  TrsNilai2.h  TrsNilai3.h  TrsPendaftaran.h  TrsPerangkingan.h  crudCamaba.h  crudGelombang.h  crudJabatan.h  crudJalurPenerimaan.h  crudKaryawan.h  crudProgramStudi.h  crudTahunAjar.h  login.h  main.c
